Fixed footer gaps

--- a/css/styles.css
+++ b/css/styles.css
@@ -267,6 +267,7 @@ img {
 
 /* ===================Mobile Menu=================== */
 .menu-container {
+  min-width: 320px;
   display: flex;
   flex-direction: column;
   position: fixed;
@@ -487,6 +488,11 @@ img {
   display: flex;
   justify-content: space-between;
   gap: 24px;
+}
+@media (min-width: 320px) and (max-width: 1158px) {
+  .doing {
+    display: none;
+  }
 }
 /* ===================/DOING=================== */
 
@@ -717,11 +723,13 @@ img {
   fill: var(--cloud-color);
 }
 
+.footer-third-wrapper {
+  width: 100%;
+}
+
 .footer-form {
   display: flex;
-  align-items: center;
   flex-direction: column;
-  gap: 24px;
 }
 .footer-form-label {
   margin-bottom: 16px;
@@ -734,7 +742,7 @@ img {
 }
 .footer-form-input {
   padding: 8px 16px;
-  width: 264px;
+  width: 100%;
   height: 40px;
   border-radius: 4px;
   border: 1px solid var(--white-color);
@@ -753,6 +761,7 @@ img {
   letter-spacing: 0.04em;
 }
 .footer-form-btn {
+  margin: 0 auto;
   max-width: 165px;
   /* min-width: 165px; */
   height: 40px;
@@ -796,9 +805,16 @@ img {
   .footer-form {
     flex-direction: row;
     align-items: baseline;
+    gap: 24px;
   }
   .footer-form-label {
     text-align: left;
+  }
+  .footer-form-input {
+    width: 264px;
+  }
+  .footer-form-btn {
+    margin: 0;
   }
 }
 @media (min-width: 1158px) {
@@ -983,7 +999,7 @@ img {
 .form-base-checkbox:checked + .form-label-checkbox .form-custom-checkbox {
   background-color: var(--pressed-color);
   border: none;
-  fill: var(--cloud-color); /* Колір іконки при виборі */
+  fill: var(--cloud-color);
 }
 .form-label-checkbox-link {
   color: var(--brand-color);
